# document-acquisition-workbench

./: .gitignore  Dockerfile  HANDOVER.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-gcp.yml
context/: execution_policy.yaml  review_policy.md  source_priority.md
doc_workbench/: __init__.py  cli.py  config.py  execution_policy.py  http_utils.py  models.py  policy.py
doc_workbench/acquisition/: __init__.py  discovery.py
doc_workbench/commands/: __init__.py
doc_workbench/context/: context_policy.yaml  execution_policy.yaml  followup_policy.md
doc_workbench/evals/: __init__.py  run_evals.py
doc_workbench/observability/: __init__.py  langfuse_bridge.py  tracer.py
doc_workbench/orchestration/: __init__.py  graph.py  nodes.py  state.py
doc_workbench/providers/: __init__.py  base.py  regulatory_filings.py  search.py  sec.py
doc_workbench/registry/: __init__.py  document_registry.py  metadata_scanner.py
doc_workbench/review/: __init__.py  classifier.py  workflow.py
doc_workbench/storage/: __init__.py  downloader.py
docs/: architecture.md  deployment_gcp.md  goals_and_features.md  hardened-runtime.md
evals/: run_evals.py
examples/: public_companies.csv
examples/traces/: demo_trace.json
terraform/: GCP_IMPLEMENTATION_SUMMARY.md  GCS_MOUNT_PERMISSIONS_ISSUE.md  TERRAFORM_VALIDATION_RESULTS.md  VALIDATION_INSTRUCTIONS.md
terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
terraform/gcp/: backend-dev.hcl  backend-prod.hcl  backend-staging.hcl  main.tf  (+2 more)
tests/: test_cli_flow.py  test_discovery.py  test_evals.py  test_execution_policy.py  test_followup_search.py  test_http_utils.py  test_langfuse_bridge.py  test_orchestration.py  test_policy_and_tracing.py  test_registry.py  test_sanitation.py
(+23 files in other folders)
