[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc_workbench"
version = "0.1.0"
description = "CLI workbench for discovering, reviewing, downloading, and scanning public annual reports or filings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "pypdf>=4.2.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
doc-workbench = "doc_workbench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["doc_workbench"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
