[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc_workbench"
version = "0.1.0"
description = "CLI workbench for discovering, reviewing, downloading, and scanning public annual reports or filings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "click>=8.0.0",
  "httpx>=0.27.0",
  "pypdf>=4.2.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23",
  "respx>=0.20",
]
observability = [
  "langfuse>=2.0",
]
orchestration = [
  "langgraph>=0.2",
]

[project.scripts]
doc-workbench = "doc_workbench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["doc_workbench"]
include = [
  "doc_workbench/evals/fixtures/*.json",
  "doc_workbench/context/*.yaml",
  "doc_workbench/context/*.md",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
